# monolith-test

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PHISHING_PRO_SUMMARY.md  PRO_UPGRADE_SUMMARY.md  README.md  WMI_PERSISTENCE_COMPLETE.md  alembic.ini  cyber.py  docker-compose.yml  init_db.py  mypy.ini  publish_sample.sh  pyproject.toml  pytest.ini  requirements.txt  requirements_extra.txt  ruff.toml  run_rq_worker.sh  run_with_opsec.sh  run_workers.sh  sitecustomize.py  ss  wsgi.py
.cargo/: config.toml
agents/: beacon_steg_handler.py  dll_sideload_beacon_simple.py  evasive_beacon.py  event_driven_handler.py  memory_dll_injector.py  python_beacon.py  thread_hiding_handler.py  wmi_persistence_handler.py
agents/native/: Cargo.toml
agents/native/src/: beacon.rs  byovd_helper.rs  crypto.rs  lib.rs  loader.rs  main.rs  pe_morph.rs  process_creation.rs  syscall.rs  syscalls.rs
alembic_migrations/: README.md  env.py
c2/: team_server.py  web_c2_listener.py
configs/: ai_adversarial_config.yaml  beacon_config.yaml  behavioral_mimicry_config.yaml  cloud_pivot_config.yaml  evasion_profile_aggressive.yaml  evasion_profile_default.yaml  evasion_profile_none.yaml  evasion_profile_paranoid.yaml  evasion_profile_stealth.yaml  lateral_chain_example.yaml  quantum_crypto_config.yaml  relay_ninja_config.yaml  vr_viz_config.yaml  waf_bypass_config.yaml  web_shell_config.yaml  zero_day_config.yaml
cyberapp/: __init__.py  app.py  cli.py  extensions.py  migrations.py  settings.py
cybermodules/: __init__.py  ad_enum.py  ad_ticket_smuggler.py  adcs_takeover.py  ai_lateral_guide.py  ai_post_exploit.py  ai_vuln.py  api_scanner.py  arsenal.py  attack_graph.py  auto_update.py  autoexploit.py  blockchain.py  blockchain_c2.py  bypass_amsi_etw.py  c2_beacon.py  c2_framework.py  c2_implant.py  chain_workers.py  cleanup_engine.py  cloud.py  cloud_pivot.py  config.py  covert_rpc_transport.py  dd_executor.py  dead_drop_resolver.py  decentralized.py  ebpf_packet_smuggler.c  ebpf_packet_smuggler_handler.py  elite_opsec_advanced.py  elite_opsec_v4_ultra.py  elite_payload_generator.py  elite_payload_generator_v2.py  elite_payload_generator_v3.py  elite_ring03_orchestrator.py  entra_cloud_pivot.py  error_handling.py  evasion.py  evasion_testing.py  event_driven_c2.py  (+52 more)
docs/: MEMORY_DLL_INJECTION_GUIDE.md  STEGANOGRAPHY_GUIDE.py  WMI_PERSISTENCE_GUIDE.md  evasion.md  kerberos-relay.md  lateral-movement.md
evasion/: __init__.py  acg_bypass.py  adaptive_router.py  adaptive_timing.py  advanced_waf_bypass.py  ai_adversarial.py  aitm_proxy.py  amsi_bypass.py  anti_forensics_rotation.py  anti_sandbox.py  api_sequence_spoofing.py  auto_reporting.py  autonomous_hunter.py  behavioral_mimicry.py  byovd_kernel_persistence.py  c2_profiles.py  c2_traffic_entropy.py  call_stack_spoofing.py  edr_poison.py  (+44 more)
(+335 files in other folders)
