[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monolith-cyber"
version = "0.1.0"
description = "MONOLITH v68 Ultimate Pentest Framework"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "cyberapp",
  "cyberapp.*",
  "cybermodules",
  "cybermodules.*",
  "monolith",
  "monolith.*",
]
