[package]
name = "monolith-agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lib]
name = "monolith_agent"
path = "src/loader.rs"

[[bin]]
name = "monolith_dropper"
path = "src/main.rs"

[dependencies]
aes = "0.8"
base64 = "0.22"
chacha20poly1305 = "0.10"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
url = "2.5"
chrono = { version = "0.4", features = ["std"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Networking_WinHttp",
] }
